# cil_emit_api

./: .gitignore  Cargo.toml  README.md  build.rs
cs_sln/: CILEmitAPI.csproj  CILEmitAPI.sln  EmitAPI.cs  build.bat
src/: enums.rs  lib.rs  newtypes.rs
