[package]
name = "cil_emit_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
bitflags = "1.3.2"
blake2 = "0.10.4"
netcorehost = "0.8.0"
to_snake_case = { path = "C:/assets/programmingprojects/rust/to_snake_case" }